polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibraheemg-polybot            # Name of the deployment
  namespace: ibraheemg-ns           # Namespace where the deployment resides
spec:
  replicas: 1                        # Number of desired replicas
  selector:
    matchLabels:
      app: ibraheemg-polybot         # Selector to match the labels of pods controlled by this deployment
  template:
    metadata:
      labels:
        app: ibraheemg-polybot       # Labels for pods created by this template
    spec:
      containers:
        - name: ibraheemg-polybot    # Name of the container
          image: 933060838752.dkr.ecr.us-east-1.amazonaws.com/ibraheemg-polybot:latest   # Docker image for the container
          ports:
            - containerPort: 8443     # Port the container listens on
          resources:
            requests:
              memory: "100Mi"        # Requested memory for the container
              cpu: "50m"             # Requested CPU for the container
            limits:
              memory: "150Mi"        # Memory limit for the container
              cpu: "100m"            # CPU limit for the container
          livenessProbe:
            httpGet:
              path: /
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ibraheemg-polybot-service      # Name of the service
  labels:
    app: ibraheemg-polybot             # Labels for the service
spec:
  selector:
    app: ibraheemg-polybot             # Selector to match the labels of pods to expose
  ports:
    - protocol: TCP
      port: 8443                        # Port exposed by the service
      targetPort: 8443                  # Port on pods to forward traffic to
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibraheemg-polybot-ingress      # Name of the ingress
  namespace: ibraheemg-ns              # Namespace where the ingress resides
spec:
  ingressClassName: nginx              # Ingress class
  tls:
    - hosts:
        - bot.atech-bot.click          # Hosts for which TLS should be enabled
      secretName: tls-secret           # Secret containing TLS certificate and key
      # secretName: tls-ibraheemg-secret # Secret containing TLS certificate and key
  rules:
    - host: bot.atech-bot.click        # Host for which the rules apply
      http:
        paths:
          - path: /ibraheemg-polybot    # Path configuration
            pathType: Prefix
            backend:
              service:
                name: ibraheemg-polybot-service   # Backend service for handling traffic
                port:
                  number: 8443                    # Port on the backend service
